[gd_scene load_steps=9 format=3 uid="uid://cjpoc7bhl5u0o"]

[ext_resource type="PackedScene" uid="uid://6biqldqluklg" path="res://assets/scenes/enemy.tscn" id="1_fyjvv"]
[ext_resource type="Texture2D" uid="uid://bvnwyjaieeny6" path="res://assets/sprites/BossEnemy.png" id="2_voetn"]
[ext_resource type="PackedScene" uid="uid://dem64yabda4mb" path="res://assets/scenes/level_exit.tscn" id="2_wlbbi"]
[ext_resource type="PackedScene" uid="uid://cierws6fcdu0c" path="res://assets/scenes/weapon.tscn" id="4_0jkjl"]
[ext_resource type="Script" path="res://assets/scripts/enemy_bossAI.gd" id="5_afyrw"]
[ext_resource type="Script" path="res://assets/scripts/bulletmanager.gd" id="6_pp5wo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f687q"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5tg4p"]
radius = 200.0

[node name="Enemy" instance=ExtResource("1_fyjvv")]
item_scenes = Array[PackedScene]([ExtResource("2_wlbbi")])

[node name="Sprite2D" parent="CharacterBody2D" index="0"]
rotation = 1.5708
scale = Vector2(1, 1)
texture = ExtResource("2_voetn")

[node name="CollisionShape2D" parent="CharacterBody2D" index="1"]
shape = SubResource("CircleShape2D_f687q")

[node name="Weapon" parent="CharacterBody2D" index="2" instance=ExtResource("4_0jkjl")]
position = Vector2(40, 0)
damage = 30
speed = 1

[node name="BulletManager" type="Node2D" parent="CharacterBody2D" index="3"]
script = ExtResource("6_pp5wo")

[node name="AI" type="Node2D" parent="CharacterBody2D" index="4"]
script = ExtResource("5_afyrw")
optimal_range = 100
movement_speed = 80
weapon_cooldown = 0.6

[node name="PlayerDetectionZone" type="Area2D" parent="CharacterBody2D/AI" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AI/PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_5tg4p")

[node name="PatrolTimer" type="Timer" parent="CharacterBody2D/AI" index="1"]
wait_time = 3.0

[node name="Health" parent="." index="2"]
max_health = 200
health = 200

[connection signal="body_entered" from="CharacterBody2D/AI/PlayerDetectionZone" to="CharacterBody2D/AI" method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/AI/PlayerDetectionZone" to="CharacterBody2D/AI" method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="CharacterBody2D/AI/PatrolTimer" to="CharacterBody2D/AI" method="_on_patrol_timer_timeout"]
